intear-dex-management/tests/snapshots/views__engine_balance_of_dex_with_all_assets.snap
---
source: intear-dex-management/tests/views.rs
expression: "cli.view(&[\"engine\", \"balance\", \"slimedragon.near/xyk\", \"all\"])"
---
$ near-intear-dex-management engine balance slimedragon.near/xyk all network-config sandbox now
exit code: 1
--- stdout ---
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine balance slimedragon.near/xyk all network-config sandbox now

Error:
   0: The assets of a dex can't be listed, so name them, e.g. `engine balance slimedragon.near/xyk near,nep141:usdt.tether-token.near`
