intear-dex-management/tests/snapshots/views__engine_balance_of_unregistered_account.snap
---
source: intear-dex-management/tests/views.rs
expression: "cli.view(&[\"engine\", \"balance\", \"bob.near\", \"all\"])"
---
$ near-intear-dex-management engine balance bob.near all network-config sandbox now
exit code: 0
--- stdout ---
bob.near has no assets registered on dex.intear.near
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management engine balance bob.near all network-config sandbox now
